# MunsellSpace

./: .gitignore  .wqmignore  4007_validation_results.csv  99th_percentile_colors.csv  99th_percentile_detailed.csv  ACCURACY_STATUS_REPORT.md  ACHIEVEMENT_SUMMARY.md  ALGO.md  API.md  BACKTESTING_DETAILS.md  BACKTESTING_DETAILS_V4.md  BACKTESTING_REPORT.md  BIDIRECTIONAL_CONSISTENCY_REPORT.md  BREAKTHROUGH_RESTORATION_SUMMARY.md  CHANGELOG.md  CLASSIFICATION_ERRORS_REPORT.md  CLAUDE.md  COMPREHENSIVE_CONVERSION_DATASET.md  COMPREHENSIVE_DATASET_V2_ANALYSIS.md  CONTRIBUTING.md  CONVERSION_ANALYSIS_SUMMARY.md  CONVERSION_BRANCH_ARTIFACTS.md  CREDITS.md  CURRENT_STATUS.md  Cargo.toml  ESSENTIAL_FILES.md  FINAL_STATUS_REPORT.md  FINAL_VALIDATION_REPORT.md  FULL_4007_VALIDATION_REPORT.md  FULL_VALIDATION_REPORT.md  HUE_RANGE_METHOD_COMPARISON.md  ILLUMINANT_METHOD_COMPARISON_REPORT.md  ILLUMINANT_PRECISION_ANALYSIS_REPORT.md  IMPLEMENTATION_FIXES_REQUIRED.md  IMPLEMENTATION_STATUS.md  INVESTIGATION_SUMMARY.md  ISCC-NBS-Definitions.csv  ISCC_NBS_REFERENCE_DATASET.csv  ISCC_NBS_accuracy_requirements.md  LAB_IMPLEMENTATION_SUMMARY.md  (+495 more)
.specstory/: .project.json
.taskmaster/: state.json
assets/: ISCC-NBS-Colors.csv  ISCC-NBS-Definitions.csv  README.md
benches/: conversion_benchmarks.rs  munsell_conversion_benchmarks.rs
debug_python_analysis/: accuracy_assessment.py  analyze_chroma_differences.py  analyze_python_algorithm.py  check_astm_hue_calculation.py  check_python_api.py  check_python_astm_hue.py  check_python_data_format.py  check_python_internals.py  compare_boundary_values.py  complete_4007_analysis.py  debug_convergence_issue.py  debug_high_value_green.py  debug_interpolation_calculation.py  debug_single_hue.py  debug_spec_array.py  debug_xy_function_call.py  explore_colour_api.py  extract_python_renotation_data.py  extract_python_xy_from_renotation.py  find_family_errors.py  full_4007_analysis.py  full_4007_test.py  identify_family_mismatches.py  investigate_green_colors.py  investigate_python_implementation.py  investigate_python_interpolation.py  remove_debug.py  test_achromatic_center.py  test_boundary_hues.py  test_chroma_convergence.py  test_exact_specification.py  test_interpolation_exact.py  test_interpolation_method.py  test_interpolation_method_decision.py  test_local_minima.py  test_python_convergence.py  test_python_convergence_behavior.py  test_python_exact_algorithm.py  test_python_functions_correctly.py  test_python_xy_from_renotation.py  (+11 more)
examples/: batch_rgb_to_munsell.rs  debug_specific_case.rs  illuminant_comparison.rs  mathematical_debug.rs  reverse_conversion_demo.rs  simple_rgb_to_munsell.rs  test_illuminants.rs
investigation/: test_boundary.rs  wedge_test.txt
literature/: REFERENCES.md
more_non-basic_surface_colour_names/: RESEARCH_NOTES.md  inventory.md
more_non-basic_surface_colour_names/scripts/: README.md  aggregation_methods.py  alternative_loss_metrics.py  augment_centore_polyhedra.py  calibrated_conversions.py  color_transforms.py  delta_e_metrics.py  domain_comparison.py  experiment_logger.py  extended_domain_comparison.py  generate_loss_analysis_report.py  generate_visualizations.py  jacobian_analysis.py  linear_transformations.py  loss_functions.py  match_screen_surface_families.py  nn_transformations.py  nonlinear_transformations.py  pairwise_loss_analysis.py  pareto_from_existing.py  pareto_frontier_analysis.py  per_family_volume_ratios.py  polyhedron_metrics.py  pyproject.toml  quality_scoring.py  rgb_profiles.py  roughness_metrics.py  sample_size_analysis.py  screen_polyhedra_thresholds.py  test_calibrated_conversions.py  test_phase6_roughness.py  test_screen_polyhedra_thresholds.py  visualize_gamut_comparison.py  visualize_munsell_nonuniformity.py
more_non-basic_surface_colour_names/scripts/arena/: inference.py
more_non-basic_surface_colour_names/scripts/src/: aggregate_xkcd_survey.py  analyze_xkcd_survey.py  build_polyhedron.py  consolidate_datasets.py  diagnose_white.py  diagnose_white_detailed.py  excluded_colors.txt  normalize_datasets.py  track_a_full_verification.py  track_a_verification.py  track_b_phase3_calibration.py
more_non-basic_surface_colour_names/scripts/src/clustering/: __init__.py  analyze_spatial_coherence.py  extract_new_overlays.py  family_clustering.py  validate_centore.py
more_non-basic_surface_colour_names/scripts/src/core/: __init__.py  geometry.py  munsell.py
more_non-basic_surface_colour_names/scripts/src/data_service/: __init__.py  aggregator.py  schema.py  service.py  sources.py  test_service.py
more_non-basic_surface_colour_names/scripts/src/investigation/: phase1_data_inventory.py  phase4_calibration_analysis.py  phase6_synthesis.py
more_non-basic_surface_colour_names/scripts/src/phase6/: __init__.py  assign_families.py  centore_comparison.py  consistency_validation.py  polyhedra_construction.py  rgb_to_munsell.py
more_non-basic_surface_colour_names/scripts/src/semantic/: analyze_results.py  centore_comparison.py  color_name_pipeline.py  common.py  correction_model.py  exp1_sbert_similarity.py  exp2_bert_tokens.py  exp4_hybrid.py  fit_fourier_correction.py  full_scale_validation.py  hypothesis_tests.py  rigorous_validation.py  run_experiments.py  visualize_correction_model.py
old_analysis/: analyze_worst_cases.py  batch_python_generate.py  complete_validation.py  efficient_4007_validation.py  extract_actual_worst.py  focused_worst_analysis.py  full_4007_validation.py  full_scale_validation.py  generate_python_batch.py  quick_validation.py  rust_python_comparison.csv  sample_validation.py  test_worst_cases_with_python.py  verify_individual.py  verify_worst_cases.py
overlay-preprocessing/: SCRIPTS_INVENTORY.md  ml_classification.py  pyproject.toml
proptest-regressions/: property_tests.txt
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/munsellspace/: __init__.py  converter.py  types.py
scripts/: classify_color_words.py
src/: ISCC-NBS-Definitions.csv  color_interpolation.rs  color_math_utils.rs  color_notation_parser.rs  color_utils.rs  constants.rs  error.rs  (+41 more)
(+391 files in other folders)
