[package]
name = "munsellspace"
version = "1.0.0"
edition = "2021"
authors = ["MunsellSpace Contributors"]
description = "High-precision sRGB to Munsell color space conversion with 100% reference accuracy"
license = "MIT"
repository = "https://github.com/chrisgve/MunsellSpace"
documentation = "https://docs.rs/munsellspace"
homepage = "https://github.com/chrisgve/MunsellSpace"
keywords = ["color", "munsell", "srgb", "color-science", "conversion"]
categories = ["graphics", "science", "algorithms"]
readme = "README.md"
include = [
    "src/lib.rs",
    "src/types.rs", 
    "src/error.rs",
    "src/converter.rs",
    "tests/integration_tests.rs",
    "tests/data/srgb-to-munsell.csv",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
# Core dependencies for basic functionality
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing for automatic instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
ordered-float = "4.1"

# Color science and mathematical operations
palette = { version = "0.7", features = ["std", "serializing"] }

# Geometric operations for ISCC-NBS polygon validation and point-in-polygon queries
geo = "0.30"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = []
cli = ["clap"]

[dependencies.clap]
version = "4.0"
features = ["derive"]
optional = true

# Note: Binary, examples, and benchmarks will be added in future versions

[lib]
name = "munsellspace"
path = "src/lib.rs"

[[bin]]
name = "convert_rgb"
path = "src/bin/convert_rgb.rs"

[[bin]]
name = "mathematical_convert_rgb"
path = "src/bin/mathematical_convert_rgb.rs"

[[bin]]
name = "test_python_port_accuracy"
path = "src/bin/test_python_port_accuracy.rs"

[[bin]]
name = "test_simple_colors"
path = "src/bin/test_simple_colors.rs"

[[bin]]
name = "trace_color"
path = "src/bin/trace_color.rs"

[[bin]]
name = "classification_accuracy_test"
path = "classification_accuracy_test.rs"

[[bin]]
name = "debug_specific_case"
path = "debug_specific_case.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

[[bench]]
name = "conversion_benchmarks"
harness = false