[package]
name = "munsellspace"
version = "1.0.0"
edition = "2021"
authors = ["MunsellSpace Contributors"]
description = "High-precision sRGB to Munsell color space conversion with 100% reference accuracy"
license = "MIT"
repository = "https://github.com/chrisgve/MunsellSpace"
documentation = "https://docs.rs/munsellspace"
homepage = "https://github.com/chrisgve/MunsellSpace"
keywords = ["color", "munsell", "srgb", "color-science", "conversion"]
categories = ["graphics", "science", "algorithms"]
readme = "README.md"
include = [
    "src/lib.rs",
    "src/types.rs", 
    "src/error.rs",
    "src/converter.rs",
    "tests/integration_tests.rs",
    "tests/data/srgb-to-munsell.csv",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
# Core dependencies for basic functionality
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing for automatic instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
lazy_static = "1.4"
regex = "1.10"
ordered-float = "4.1"

# Color science and mathematical operations
palette = { version = "0.7", features = ["std", "serializing"] }

# Geometric operations for ISCC-NBS polygon validation and point-in-polygon queries
geo = "0.30"

# Parallel processing for performance
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
proptest = "1.0"

[features]
default = []
cli = ["clap"]

[dependencies.clap]
version = "4.0"
features = ["derive"]
optional = true

# Note: Binary, examples, and benchmarks will be added in future versions

[lib]
name = "munsellspace"
path = "src/lib.rs"

[[bin]]
name = "convert_rgb"
path = "src/bin/convert_rgb.rs"

[[bin]]
name = "mathematical_convert_rgb"
path = "src/bin/mathematical_convert_rgb.rs"

[[bin]]
name = "batch_convert"
path = "src/bin/batch_convert.rs"

[[bin]]
name = "comprehensive_dataset_misses"
path = "investigation/src/comprehensive_dataset_misses.rs"

[[bin]]
name = "wedge_coverage_test"
path = "investigation/src/wedge_coverage_test.rs"

[[bin]]
name = "validate_4007"
path = "investigation/src/validate_4007.rs"

[[bin]]
name = "comprehensive_conversion_dataset"
path = "investigation/src/comprehensive_conversion_dataset.rs"

[[bin]]
name = "illuminant_method_comparison"
path = "investigation/src/illuminant_method_comparison.rs"

[[bin]]
name = "quick_conversion_dataset"
path = "investigation/src/quick_conversion_dataset.rs"

[[bin]]
name = "comprehensive_dataset_v3"
path = "investigation/src/comprehensive_dataset_v3.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

