[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "munsellspace"
version = "1.0.0"
authors = [
    {name = "MunsellSpace Contributors"},
]
description = "High-precision sRGB to Munsell color space conversion with 99.98% reference accuracy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
keywords = [
    "color", 
    "munsell", 
    "srgb", 
    "color-science", 
    "conversion", 
    "color-space", 
    "rgb", 
    "graphics", 
    "image-processing"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/chrisgve/MunsellSpace"
"Bug Tracker" = "https://github.com/chrisgve/MunsellSpace/issues"
"Documentation" = "https://docs.rs/munsellspace"
"Source Code" = "https://github.com/chrisgve/MunsellSpace"

[project.scripts]
munsellspace = "munsellspace.cli:main"

[tool.setuptools]
packages = ["munsellspace"]

[tool.setuptools.package-data]
munsellspace = ["bin/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true