[project]
name = "color-research-scripts"
version = "0.1.0"
description = "Color data preprocessing and analysis scripts for MunsellSpace research"
requires-python = ">=3.10,<3.12"  # Torch 2.1.x only has wheels for Python 3.10-3.11
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # Machine learning
    "scikit-learn>=1.3.0",
    "torch>=2.0.0,<=2.1.2",  # Pin to version with x86_64 macOS wheels
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Data handling
    "pandas>=2.0.0",

    # HTTP requests (for data collection)
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",

    # Convex hull computation
    "geo>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
